# buzvis-

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
conan/deb/: CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-debug-x86_64.sh  conanrun.sh  conanrunenv-debug-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
include/: SpeechSynthesis.h
src/: main.cpp
src/app/: BuzvisApp.cpp  BuzvisApp.h
src/modules/: ASRHandler.cpp  ASRHandler.h  SpeechSynthesis.cpp
src/py_modules/: coqui_stt_module.py  style_tts_module.py  whisper_module.py
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: Singleton.h
